remove p margin, add gap to header main content, fix h1

--- a/style.css
+++ b/style.css
@@ -94,13 +94,14 @@ select {
     max-height: 398px;
     width: 585px;
     display: flex;
+    gap: 2.5rem;
     flex-direction: column;
     justify-content: space-around;
     align-items: start;
 }
 .header-main-content,
 .header-main > img {
-    margin: 0 120px;
+    margin: 0 60px 0 120px;
 }
 .header-main > img {
     width: 482px;
@@ -110,11 +111,14 @@ select {
     max-width: 483px;
 }
 h1 {
+    font-weight: 500;
+    line-height: 72px;
     margin: 0;
     color: #333333;
     font-size: 64px;
 }
 p {
+    margin: 0;
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     line-height: 30px;
